2007-12-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CodeGen.pm (gen_boxed_stuff): Correctly cast the return value of
	the Sv$classname macros for boxed types so as to avoid handing out
	void* pointers.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.171.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>


	* GBookmarkFile.xs: Hush compiler warning.

	* CodeGen.pm
	* gperl.h
	* typemap: Replace the last occurences of SvOK with
	gperl_sv_defined.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports
	* Glib.xs
	* gperl.h: Add gperl_sv_defined, which checks an SV for
	definedness just like Perl's defined() does.

	* GBoxed.xs
	* GError.xs
	* GObject.xs
	* GSignal.xs
	* GType.xs
	* GValue.xs
	* Glib.xs: Use gperl_sv_defined instead of SvOK to check SVs for
	definedness.  This keeps Glib from erroneously thinking your
	scalars are undefined, for example when using tied hashes.

	* MANIFEST
	* t/tied_definedness.t: Test that values from tied hashes get
	through the definedness checks.

2007-11-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GError.xs (gperl_gerror_from_sv): Fix the check for undefined
	domain keys in GError hashes.

	* GType.xs (add_interfaces): Fix the check for undefined interface
	names.

2007-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports: Add SvGKeyFile.  (Reported by spicy jack)

2007-10-28  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.170.

2007-10-28  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs: Define and use PORTABLE_LL_FORMAT and
	PORTABLE_ULL_FORMAT.

2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* MakeHelper.pm (postamble_docs_full): When constructing the
	add_types call, make sure to properly quote the paths.  (Patch by
	Andres König)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>
